--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.1.3",
         "barryvdh/laravel-cors": "^0.11.4",
+        "barryvdh/laravel-ide-helper": "^2.6",
         "dingo/api": "^2.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
