--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,10 @@
         "classmap": [
             "database/seeds",
             "database/factories"
+        ],
+        "files" : [
+            "app/Helpers/Response.php",
+            "app/Helpers/HelperFunc.php"
         ]
     },
     "autoload-dev": {
